# Internships-for-developers

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
fastapi_app/: __init__.py  app.py
fastapi_app/authentication/: __init__.py  auth_user.py  create_token.py  jwt_utils.py  token_utils.py  validate_auth.py
fastapi_app/configs/: __init__.py  loguru_conf.py  main_conf.py  taskiq_broker.py  test_url.py  validate_env.py
fastapi_app/crud/: __init__.py
fastapi_app/crud/user_crud/: __init__.py  check_email.py  check_username.py  create_user.py  get_auth_user.py  get_by_id.py
fastapi_app/database/: __init__.py  async_generator.py  db_session.py  db_session_test.py  test_db_session.py
fastapi_app/exceptions/: __init__.py  bad_request.py  forbidden.py  general_errors.py  not_found.py  unauthorized.py
fastapi_app/mailing/: __init__.py  send_email.py  welcome_email.py
fastapi_app/models/: __init__.py  base.py  user.py
fastapi_app/models/mixins/: __init__.py  pk_mix.py  soft_delete.py
fastapi_app/routers/: __init__.py  jwt.py  user.py
fastapi_app/schemas/: __init__.py  token.py  user.py
fastapi_app/services/: __init__.py
fastapi_app/services/user_services/: __init__.py  create_user_with_email.py
fastapi_app/tasks/: __init__.py  welcom_email_notification.py
fastapi_app/utils/: __init__.py  case_converter.py
migrations/: env.py
migrations/versions/: 2025_06_26_1608-0f271e752ed1_base_init.py  2025_06_27_0336-db539a93fca0_user_init.py  2025_07_04_1200-47e7fd36455a_user_init.py
tests/: __init__.py  conftest.py
tests/test_user/: __init__.py  test_create.py  test_refresh_token.py  test_user_auth.py
