[project]
name = "internships-for-developers"
version = "0.1.0"
description = ""
authors = [
    {name = "Good Team"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
flake8 = "^7.3.0"
pylint = "^3.3.7"
loguru = "^0.7.3"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
isort = "^6.0.1"
httpx = "^0.28.1"
nano = "^0.10.0"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = """
    W0613,
    R0903,
    E0213
"""
